--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stockfoliofront",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -13,12 +14,14 @@
     "react": "^18.2.0",
     "react-background-slider": "^3.0.0-0",
     "react-dom": "^18.2.0",
+    "react-material-ui-form-validator": "^3.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
