--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stockfoliofront",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://54.196.247.47:5000",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
