--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stockfoliofront",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://54.226.68.179:5000/",
+  "proxy": "https://54.226.68.179:5000/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
