--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stockfoliofront",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://ec2-54-226-68-179.compute-1.amazonaws.com/blockEstimate",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
