--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=https://ec2-54-209-53-115.compute-1.amazonaws.com
+REACT_APP_BACKEND_URL=ec2-54-209-53-115.compute-1.amazonaws.com
