--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stockfoliofront",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://54.209.53.115:5000",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
